--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     #hud .right{pointer-events:auto;}
     #hud button{pointer-events:auto;}
     .pill{
-      background: var(--panel);
+      background: linear-gradient(135deg, rgba(255,255,255,.05), rgba(255,255,255,.00));
       border:1px solid var(--line);
       border-radius:999px;
       padding:8px 10px;
@@ -72,8 +72,34 @@
       display:flex; flex-direction:column; line-height:1.05;
       gap:2px;
     }
-    .stat .k{font-size:11px; color:var(--muted)}
-    .stat .v{font-size:13px; font-weight:700}
+    .stat .k{font-size:11px; color:var(--muted); display:flex; align-items:center; gap:6px; letter-spacing:.15px;}
+    .stat .v{font-size:13px; font-weight:800; display:flex; align-items:center; gap:6px;}
+    .coinBadge{
+      position:relative;
+      padding:6px 12px;
+      border-radius:999px;
+      background: linear-gradient(135deg, #facc15, #f59e0b);
+      color:#1f2937;
+      box-shadow: 0 6px 16px rgba(250,204,21,.35), inset 0 1px 0 rgba(255,255,255,.35);
+      min-width:48px;
+      justify-content:center;
+      display:inline-flex;
+      align-items:center;
+      gap:6px;
+      font-weight:900;
+      overflow:hidden;
+    }
+    .coinBadge::after{
+      content:"";
+      position:absolute;
+      inset:0;
+      background: linear-gradient(120deg, rgba(255,255,255,.22), transparent 40%, rgba(255,255,255,.10));
+      pointer-events:none;
+      mix-blend-mode:screen;
+      opacity:0.8;
+    }
+    .coinBadge.pop{animation: bankPop 0.18s ease;}
+    @keyframes bankPop{0%{transform:scale(1);}50%{transform:scale(1.08);}100%{transform:scale(1);}}
     .divider{width:1px; height:18px; background:var(--line)}
     .btn{
       pointer-events:auto;
@@ -89,7 +115,15 @@
       transition: transform .08s ease, background .12s ease, border-color .12s ease;
     }
     .btn:hover{background: rgba(255,255,255,.09)}
-    .btn:active{transform: translateY(1px) scale(.99)}
+    .btn:active{transform: translateY(1px) scale(.98)}
+    .btn.iconBtn{
+      width:44px; height:44px;
+      border-radius:50%;
+      padding:0;
+      display:flex; align-items:center; justify-content:center;
+      background: radial-gradient(circle at 30% 30%, rgba(255,255,255,.08), rgba(255,255,255,.02));
+    }
+    .btn.toggleOn{box-shadow: 0 0 0 1px rgba(94,234,212,.45), 0 0 16px rgba(94,234,212,.35);}
     .btn.primary{
       background: linear-gradient(135deg, rgba(139,92,246,.85), rgba(139,92,246,.45));
       border-color: rgba(139,92,246,.55);
@@ -128,8 +162,9 @@
       transform-origin:left center;
     }
     .hpText{font-size:12px; color:var(--muted); font-weight:700}
-    .waveProg{width:180px; height:10px; border-radius:999px; background:rgba(255,255,255,.07); border:1px solid rgba(255,255,255,.08); overflow:hidden; position:relative;}
-    .waveFill{position:absolute; left:0; top:0; height:100%; width:0%; background: linear-gradient(90deg, rgba(139,92,246,.85), rgba(94,234,212,.8)); box-shadow: 0 2px 10px rgba(139,92,246,.35);}
+    .waveMeta{display:flex; flex-direction:column; gap:4px;}
+    .waveProg{width:200px; height:12px; border-radius:12px; background:rgba(0,0,0,.35); border:1px solid rgba(255,255,255,.12); overflow:hidden; position:relative; box-shadow: inset 0 2px 6px rgba(0,0,0,.35);}
+    .waveFill{position:absolute; left:0; top:0; height:100%; width:0%; background: linear-gradient(90deg, rgba(139,92,246,.95), rgba(94,234,212,.9)); box-shadow: 0 0 14px rgba(94,234,212,.45); border-right:1px solid rgba(255,255,255,.35);}
     .tag{font-size:11px; color:var(--muted); font-weight:800; letter-spacing:.5px; text-transform:uppercase;}
     .pauseBtn{padding:9px 10px; border-radius:12px; min-width:46px;}
 
@@ -259,17 +294,24 @@
     }
 
     /* Settings panel */
+    #settingsOverlay{position:fixed; inset:0; display:none; align-items:flex-start; justify-content:flex-end; padding:14px; z-index:40; background:rgba(0,0,0,.45); backdrop-filter: blur(4px);}
+    #settingsOverlay.show{display:flex;}
+    #settingsOverlay .backdrop{position:absolute; inset:0;}
     #settingsPanel{
-      position:absolute; right:12px; top:56px;
+      position:relative;
       background: var(--panel2);
       border:1px solid var(--line);
-      border-radius:14px;
-      padding:10px;
+      border-radius:16px;
+      padding:12px 12px 10px 12px;
       box-shadow: var(--shadow);
-      min-width:200px;
-      z-index:20;
+      min-width:220px;
+      z-index:1;
+      pointer-events:auto;
     }
-    #settingsPanel.hidden{display:none;}
+    #settingsPanel header{display:flex; align-items:center; justify-content:space-between; gap:8px; margin-bottom:8px;}
+    #settingsPanel h3{margin:0; font-size:16px; letter-spacing:.2px;}
+    #settingsPanel .closeSettings{min-height:44px; padding:6px 12px; border-radius:12px; border:1px solid var(--line); background:rgba(255,255,255,.06); color:var(--text); cursor:pointer; font-weight:800;}
+    #settingsPanel .closeSettings:active{transform: scale(.98);}
     .settingRow{display:flex; align-items:center; justify-content:space-between; gap:10px; padding:6px 0; font-size:13px;}
     .settingRow label{color:var(--muted); font-weight:700;}
     .toggle{width:42px; height:22px; border-radius:999px; background:rgba(255,255,255,.16); border:1px solid var(--line); position:relative; cursor:pointer;}
@@ -297,10 +339,10 @@
           <div class="hpText" id="hpPct">100%</div>
         </div>
 
-        <div class="pill">
+        <div class="pill bankPill">
           <div class="stat">
-            <div class="k">Bank</div>
-            <div class="v" id="coinLabel">0</div>
+            <div class="k">💰 Bank</div>
+            <div class="v"><span class="coinBadge" id="coinLabel">0</span></div>
           </div>
           <div class="divider"></div>
           <div class="stat">
@@ -315,12 +357,14 @@
         </div>
 
         <div class="pill">
-          <div class="stat">
-            <div class="k">Wave Prog</div>
-            <div class="v" id="waveProgressLabel">0/0</div>
-          </div>
-          <div class="waveProg" aria-label="Wave progress">
-            <div class="waveFill" id="waveFill"></div>
+          <div class="waveMeta">
+            <div class="stat">
+              <div class="k">📈 Wave Progress</div>
+              <div class="v" id="waveProgressLabel">0/0</div>
+            </div>
+            <div class="waveProg" aria-label="Wave progress">
+              <div class="waveFill" id="waveFill"></div>
+            </div>
           </div>
         </div>
 
@@ -343,9 +387,9 @@
       </div>
 
       <div class="right">
-        <button class="btn small pauseBtn" id="pauseBtn" title="Pause">⏸️</button>
-        <button class="btn small" id="soundBtn" title="Toggle sound">🔊 Sound</button>
-        <button class="btn small" id="settingsBtn" title="Settings">⚙️</button>
+        <button class="btn small iconBtn pauseBtn" id="pauseBtn" title="Pause">⏸️</button>
+        <button class="btn small iconBtn" id="soundBtn" title="Toggle sound">🔊</button>
+        <button class="btn small iconBtn" id="settingsBtn" title="Settings">⚙️</button>
       </div>
     </div>
 
@@ -355,11 +399,18 @@
       <div class="bossHpText" id="bossHpText">0/0</div>
     </div>
 
-    <div id="settingsPanel" class="hidden">
-      <div class="settingRow"><label>Sound</label><div class="toggle" data-setting="sound"><div class="dot"></div></div></div>
-      <div class="settingRow"><label>Vibration</label><div class="toggle" data-setting="vibration"><div class="dot"></div></div></div>
-      <div class="settingRow"><label>Reduce motion</label><div class="toggle" data-setting="motion"><div class="dot"></div></div></div>
-      <button class="btn bad" id="resetProgressSmall" style="width:100%; margin-top:8px">Reset Progress</button>
+    <div id="settingsOverlay" class="hidden">
+      <div class="backdrop" aria-hidden="true"></div>
+      <div id="settingsPanel">
+        <header>
+          <h3>Settings</h3>
+          <button class="closeSettings" id="closeSettingsBtn" aria-label="Close settings">✕ Close</button>
+        </header>
+        <div class="settingRow"><label>Sound</label><div class="toggle" data-setting="sound"><div class="dot"></div></div></div>
+        <div class="settingRow"><label>Vibration</label><div class="toggle" data-setting="vibration"><div class="dot"></div></div></div>
+        <div class="settingRow"><label>Reduce motion</label><div class="toggle" data-setting="motion"><div class="dot"></div></div></div>
+        <button class="btn bad" id="resetProgressSmall" style="width:100%; margin-top:8px">Reset Progress</button>
+      </div>
     </div>
 
     <!-- Start / Game Over overlay -->
@@ -611,7 +662,9 @@
     const soundBtn = document.getElementById("soundBtn");
     const pauseBtn = document.getElementById("pauseBtn");
     const settingsBtn = document.getElementById("settingsBtn");
+    const settingsOverlay = document.getElementById("settingsOverlay");
     const settingsPanel = document.getElementById("settingsPanel");
+    const closeSettingsBtn = document.getElementById("closeSettingsBtn");
     const resetProgressSmall = document.getElementById("resetProgressSmall");
     const settingsToggles = settingsPanel.querySelectorAll('.toggle');
 
@@ -626,13 +679,23 @@
       });
     }
 
+    function openSettingsPanel(){
+      updateSettingsUI();
+      settingsOverlay.classList.remove("hidden");
+      settingsOverlay.classList.add("show");
+    }
+
+    function closeSettingsPanel(){
+      settingsOverlay.classList.remove("show");
+      settingsOverlay.classList.add("hidden");
+    }
+
     function toggleSettingsPanel(forceOpen=false){
-      const open = forceOpen ? true : settingsPanel.classList.contains("hidden");
+      const open = forceOpen ? true : !settingsOverlay.classList.contains("show");
       if (open){
-        updateSettingsUI();
-        settingsPanel.classList.remove("hidden");
+        openSettingsPanel();
       } else {
-        settingsPanel.classList.add("hidden");
+        closeSettingsPanel();
       }
     }
 
@@ -1181,8 +1244,9 @@
     function triggerExplosion(x,y){
       if (Player.explosiveLevel <= 0) return;
       const radius = 60 + Player.explosiveLevel * 12;
+      const killList = [];
       let hitSomething = false;
-      for (let i=zombies.length-1; i>=0; i--){
+      for (let i=0; i<zombies.length; i++){
         const z = zombies[i];
         const dx = z.x - x;
         const dy = z.y - y;
@@ -1191,19 +1255,28 @@
         if (z.isBoss) {
           z.hp = Math.max(0, z.hp - 1);
           z.hitT = 0.08;
-          if (z.hp <= 0) { Sound.play("kill"); onZombieKilled(i); }
+          if (z.hp <= 0) killList.push(i);
           continue;
         }
         if (z.maxHp <= 1 || z.hp <= 1) {
-          Sound.play("kill");
-          onZombieKilled(i);
+          killList.push(i);
         } else {
-          z.hp -= 1;
+          z.hp = Math.max(0, z.hp - 1);
           z.hitT = 0.08;
-          if (z.hp <= 0) { Sound.play("kill"); onZombieKilled(i); }
+          if (z.hp <= 0) killList.push(i);
         }
       }
-      if (hitSomething) {
+      if (killList.length){
+        killList.sort((a,b) => b-a);
+        let lastIdx = -1;
+        for (const idx of killList){
+          if (idx === lastIdx) continue;
+          Sound.play("kill");
+          killZombieAtIndex(idx, "explosion");
+          lastIdx = idx;
+        }
+      }
+      if (hitSomething){
         spawnParticles(x,y,10,160);
         addRing(x,y,radius*0.35,0.3);
         Sound.play("hit");
@@ -1230,13 +1303,13 @@
     }
 
     function attemptShoot(pointerId, x, y){
-      const t = nowMs();
-      let ps = pointerState.get(pointerId);
-      if (!ps) {
-        ps = { lastShotAt: -1e9, x, y, active: true };
-        pointerState.set(pointerId, ps);
-      }
-      if (t - ps.lastShotAt < Player.tapCooldownMs) return;
+        const t = nowMs();
+        let ps = pointerState.get(pointerId);
+        if (!ps) {
+          ps = { lastShotAt: -1e9, x, y, active: true };
+          pointerState.set(pointerId, ps);
+        }
+        if (t - ps.lastShotAt < Player.tapCooldownMs) return;
 
       ps.lastShotAt = t;
       ps.x = x; ps.y = y;
@@ -1297,8 +1370,11 @@
       }
     }
 
-    function onZombieKilled(index){
+    function killZombieAtIndex(index, cause="generic"){
       const z = zombies[index];
+      if (!z) return;
+      if (z._removed) return;
+      z._removed = true;
 
       Player.kills++;
       Save.totalKills++;
@@ -1329,6 +1405,10 @@
       const last = zombies.length - 1;
       zombies[index] = zombies[last];
       zombies.pop();
+    }
+
+    function onZombieKilled(index){
+      killZombieAtIndex(index);
     }
 
     function applyPlayerDamage(amount, fromBottom=false){
@@ -1393,6 +1473,12 @@
       ps.x = p.x; ps.y = p.y;
     });
 
+    window.addEventListener("keydown", (e) => {
+      if (e.key === "Escape" && !settingsOverlay.classList.contains("hidden")) {
+        closeSettingsPanel();
+      }
+    });
+
     // ---------- UI buttons
     soundBtn.addEventListener("click", () => {
       Sound.unlock(); // allow unlocking via button too
@@ -1409,6 +1495,12 @@
         updateSettingsUI();
       });
     });
+
+    closeSettingsBtn.addEventListener("click", () => { closeSettingsPanel(); });
+    settingsOverlay.addEventListener("click", (e) => {
+      if (e.target === settingsOverlay || e.target.classList.contains("backdrop")) closeSettingsPanel();
+    });
+    settingsPanel.addEventListener("click", (e) => e.stopPropagation());
 
     pauseBtn.addEventListener("click", () => {
       if (State.mode !== "playing") return;
@@ -1579,6 +1671,9 @@
     function addCoins(amount,x=State.w*0.5,y=State.h*0.5){
       if (!amount) return;
       Player.coins += amount;
+      coinLabel.classList.remove("pop");
+      void coinLabel.offsetWidth;
+      coinLabel.classList.add("pop");
       saveGame();
       addFloatingText(x,y,`+${amount}🪙`,`#facc15`,0.9,-26);
     }
@@ -1645,6 +1740,7 @@
       shopOverlay.classList.add("hidden");
       continueOverlay.classList.add("hidden");
       pauseOverlay.classList.add("hidden");
+      closeSettingsPanel();
       startNextWave();
       updateHUD();
     }
@@ -1707,7 +1803,7 @@
 
       // Faster spawn at higher waves
       Wave.spawnEveryMs = Wave.isBossWave ? 900 : clamp(650 - w * 28, 180, 650);
-      Wave.nextSpawnAt = nowMs() + 350;
+      Wave.nextSpawnAt = nowMs() + 250;
 
       // Reward a tiny “breather” after shop
       Sound.play("wave");
@@ -1939,6 +2035,9 @@
       coinLabel.textContent = fmt(Player.coins);
       waveLabel.textContent = fmt(Wave.num);
       scoreLabel.textContent = fmt(Player.score);
+      const soundOn = Sound.getEnabled();
+      soundBtn.classList.toggle("toggleOn", soundOn);
+      soundBtn.textContent = soundOn ? "🔊" : "🔇";
 
       dmgLabel.textContent = `${fmt(Player.tapDamage)} (Lv ${Player.dmgLevel})`;
       rateLabel.textContent = `${(1000/Player.tapCooldownMs).toFixed(1)}/s (Lv ${Player.rateLevel})`;
@@ -2223,20 +2322,23 @@
         attemptShoot(pid, ps.x, ps.y);
       }
 
-      // Spawn logic
-      const t = nowMs();
-      if (Wave.active && Wave.isBossWave) {
-        if (!Wave.bossSpawned && t >= Wave.nextSpawnAt) {
-          spawnBoss();
-          Wave.spawned++;
-          Wave.bossSpawned = true;
-          Wave.nextSpawnAt = t + Wave.spawnEveryMs;
+        // Spawn logic
+        const t = nowMs();
+        if (Wave.active && !Number.isFinite(Wave.nextSpawnAt)) {
+          Wave.nextSpawnAt = t + 120;
         }
-      } else if (Wave.active && Wave.spawned < Wave.toSpawn && t >= Wave.nextSpawnAt) {
-        spawnZombie();
-        Wave.spawned++;
-        Wave.nextSpawnAt = t + Wave.spawnEveryMs * rand(0.72, 1.10);
-      }
+        if (Wave.active && Wave.isBossWave) {
+          if (!Wave.bossSpawned && t >= Wave.nextSpawnAt) {
+            spawnBoss();
+            Wave.spawned++;
+            Wave.bossSpawned = true;
+            Wave.nextSpawnAt = t + Wave.spawnEveryMs;
+          }
+        } else if (Wave.active && Wave.spawned < Wave.toSpawn && t >= Wave.nextSpawnAt) {
+          spawnZombie();
+          Wave.spawned++;
+          Wave.nextSpawnAt = t + Wave.spawnEveryMs * rand(0.72, 1.10);
+        }
 
       // Turret
       turretTryShoot();
@@ -2277,15 +2379,15 @@
         }
       }
 
-      // Wave complete?
-      const bossAlive = zombies.some(z => z.isBoss);
-      if (Wave.active) {
-        if (Wave.isBossWave) {
-          if (Wave.bossSpawned && !bossAlive) waveCleared();
-        } else if (Wave.spawned >= Wave.toSpawn && zombies.length === 0) {
-          waveCleared();
+        // Wave complete?
+        if (State.mode === "playing" && Wave.active) {
+          if (Wave.spawned >= Wave.toSpawn && zombies.length === 0) {
+            waveCleared();
+          }
+          if (Wave.spawned < Wave.toSpawn && zombies.length === 0 && (t - Wave.nextSpawnAt) > 1500) {
+            Wave.nextSpawnAt = t + 50;
+          }
         }
-      }
 
       updateHUD();
     }
